--- a/package.json
+++ b/package.json
@@ -10,8 +10,39 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
+    "nativewind": "^2.0.11",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-hook-form": "^7.52.1",
+    "react-native": "0.74.3",
+    "react-native-accordion-list-view": "^2.0.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-bouncy-checkbox": "^4.0.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0",
+    "react-native-switch-toggle": "^2.2.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,7 +58,9 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
