--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sport5PhereApp",
+  "name": "sportssphere",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -31,13 +31,16 @@
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.14.0",
+    "react-native-remix-icon": "^0.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
