--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "phosphor-react-native": "^2.0.0",
@@ -31,16 +33,21 @@
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.14.0",
     "react-native-remix-icon": "^0.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-snap-carousel-new": "^3.9.2",
     "react-native-svg": "^15.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-webview": "^13.10.5",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
